# snippet-checker

./: .envrc  .gitignore  CONTRIBUTING.md  LICENSE  README.md  check_snippets.py  justfile  main.py  output.py  pyproject.toml  question.py  repository.py  snippet.py
Dockerfiles/: numpy.Dockerfile
src/: check_snippets.py  output.py  question.py  repository.py  snippet.py
src/snippet_checker/: __main__.py  check_snippets.py  cli.py  config.py  normaliser.py  output.py  question.py  repository.py  snippet.py
test/: test_snippet.py
test/e2e/: README.md  conftest.py  test_anki.py  test_directory.py
test/e2e/snippets/: snippet_checker.toml
test/e2e/snippets/loop_scope/: discussion.html
test/e2e/snippets/loop_scope/go1-21/: go.mod  snippet_checker.toml
test/e2e/snippets/loop_scope/go1-22/: go.mod  main.go  snippet_checker.toml
test/e2e/snippets/loop_scope/javascript/: main.js
test/e2e/snippets/loop_scope/python/: main.py
test/e2e/snippets/map_views/: discussion.html
test/e2e/snippets/map_views/python/: main.py
test/e2e/snippets/map_views/ruby/: main.rb
test/e2e/snippets/which_division/: discussion.html
test/e2e/snippets/which_division/python/: main.py
test/e2e/snippets/which_division/rust/: main.rs
test/integration/: README.md  test_format.py  test_output.py
test/snippets/hello_no_newline_flush_world/: snippet.py
test/snippets/hello_no_newline_sleep_world/: snippet.py
test/snippets/limitations/hello_no_newline_flush_sleep_world/: output.txt  snippet.py
test/snippets/ok/hello_exception/: output.txt  snippet.py
test/snippets/ok/hello_no_newline_sleep_world/: output.txt  snippet.py
test/snippets/ok/hello_sleep_world/: output.txt  snippet.py
test/snippets/ok/multiprocessing/: output.txt  snippet.py
test/snippets/ok/sleep_hello/: output.txt  snippet.py
test/snippets/ok/thread_exception/: output.txt  snippet.py
test/snippets/ok/unicode_normalize/: output.txt  snippet.py
test/snippets/sleep_hello/: output.txt  snippet.py
test/unit/: README.md  test_anki_config.py  test_base_config.py  test_config.py  test_normalise.py  test_normaliser.py  test_repository.py  test_snippet.py
