[project]
name = "snippet-checker"
version = "0.1.0"
description = "Check the output and formatting of code snippets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anki>=25.9.2",
    "docker>=7.1.0",
]

[project.scripts]
snippet-checker = "snippet_checker.cli:app"

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "types-docker>=7.1.0.20251009",
]

[tool.pytest.ini_options]
pythonpath = "."
xfail_strict = true

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
