[project]
name = "snippet-checker"
version = "0.1.1"
authors = [
    {name="Cosmo Grant", email="cosmodgrant@gmail.com"},
]
description = "Check code snippets in anki or files via docker."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "anki>=25.9.2",
    "docker>=7.1.0",
    "tomli-w>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/cosmo-grant/snippet-checker"

[project.scripts]
snippet-checker = "snippet_checker.cli:app"

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "ipdb>=0.13.13",
    "ipython>=9.6.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "types-docker>=7.1.0.20251009",
]

[tool.pytest.ini_options]
pythonpath = "."
xfail_strict = true

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[build-system]
requires = ["uv_build>=0.11.1,<0.12"]
build-backend = "uv_build"
